--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,8 @@
-<h1>{{title}}</h1>
+<div class="position-absolute top-50 start-50 translate-middle">
+  <h1 class="display-5">Welcome in Family Expenses Web App!</h1>
+  <p class="text-center lead">
+    Click
+    <a style="text-decoration:none" href="/admin">here</a>
+    to start.
+  </p>
+</div>
