--- a/views/admin-panel.handlebars
+++ b/views/admin-panel.handlebars
@@ -1,7 +1,7 @@
 <div class="inner cover position-absolute top-50 start-50 translate-middle">
   <div class="container center">
     <div class="row">
-      <h1 class="display-5">You at admin panel!</h1>
+      <h1 class="display-5">You are at admin panel!</h1>
     </div>
     <div class="row">
       <div class="d-grid gap-2">
