💄 New budget management template

--- a/views/add-members.handlebars
+++ b/views/add-members.handlebars
@@ -7,7 +7,7 @@
       <form class="g-1" method="POST">
         <h1 class="display-5" style="font-size: 24px;">Add member to existing
           family!</h1>
-        <p class="lead">Chose family from dropdown.</p>
+        <p class="lead">Choose family from dropdown.</p>
         <div class="form-group">
           <label for="name">Name</label>
           <input
