--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,6 +3,11 @@
   <p class="text-center lead">
     Click
     <a style="text-decoration:none" href="/admin">here</a>
-    to start.
+    to enter admin panel.
+  </p>
+  <p class="text-center lead">
+    Click
+    <a style="text-decoration:none" href="/expanes">here</a>
+    to enter add expanses.
   </p>
 </div>
