--- a/views/admin-panel.handlebars
+++ b/views/admin-panel.handlebars
@@ -15,8 +15,11 @@
           type="button"
           href="admin/add-members"
         >Add family member</a>
-        <a class="btn btn-outline-dark" type="button" href="/add-budget">Add
-          budget</a>
+        <a
+          class="btn btn-outline-dark"
+          type="button"
+          href="admin/add-budget"
+        >Add budget</a>
       </div>
     </div>
   </div>
