--- a/views/admin-panel.handlebars
+++ b/views/admin-panel.handlebars
@@ -20,6 +20,7 @@
           type="button"
           href="admin/add-budget"
         >Add budget</a>
+        <a class="btn btn-outline-dark" type="button" href="/">Back</a>
       </div>
     </div>
   </div>
