--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,12 +2,12 @@
   <h1 class="display-5">Welcome in Family Expenses Web App!</h1>
   <p class="text-center lead">
     Click
-    <a style="text-decoration:none" href="/admin">here</a>
-    to enter admin panel.
+    <a style="text-decoration:none" href="/expenses">here</a>
+    to enter expenses management.
   </p>
   <p class="text-center lead">
     Click
-    <a style="text-decoration:none" href="/expanes">here</a>
-    to enter add expanses.
+    <a style="text-decoration:none" href="/admin">here</a>
+    to enter admin panel.
   </p>
 </div>
