✨Expenses history added

--- a/views/expenses-panel.handlebars
+++ b/views/expenses-panel.handlebars
@@ -17,7 +17,7 @@
         </div>
         <div class="d-grid gap-2">
           <button type="submit" class="btn btn-outline-dark">Next</button>
-          <a class="btn btn-outline-dark" type="button" href="/admin">Back</a>
+          <a class="btn btn-outline-dark" type="button" href="/">Back</a>
         </div>
       </form>
     </div>
