--- a/views/your-expenses.handlebars
+++ b/views/your-expenses.handlebars
@@ -19,8 +19,9 @@
     </div>
     <div class="row">
       <form class="g-1" method="POST">
-        <h1 class="display-5" style="font-size: 24px;">C'mon, spend some money!
-          💸</h1>
+        <h1 class="display-5" style="font-size: 24px;">Hi,
+          {{person.name}}
+          ✋</h1>
         <p class="lead">Write down your expenses and we will calculate your
           total 💰
           <br />
@@ -59,6 +60,14 @@
         <br />
         <div class="d-grid gap-2">
           <button type="submit" class="btn btn-outline-dark">Spend it!</button>
+          <button
+            type="button"
+            class="btn btn-outline-dark"
+            data-toggle="modal"
+            data-target="#exampleModalCenter"
+          >
+            Show all expenses
+          </button>
           <a
             class="btn btn-outline-dark"
             type="button"
@@ -66,6 +75,57 @@
           >Back</a>
         </div>
       </form>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="exampleModalCenter"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Your expenses history</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{#each expenses}}
+          <div class="container">
+            <div class="row justify-content-start">
+              <div class="col-md">
+                <span class="lead">{{this.name}}</span>
+              </div>
+              <div class="col-md">
+                <span class="lead">{{this.cost}}$</span>
+              </div>
+              <div class="col-md">
+                <span class="lead">{{this.date}}$</span>
+              </div>
+            </div>
+          </div>
+          <hr />
+        {{/each}}
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-dismiss="modal"
+        >Close</button>
+      </div>
     </div>
   </div>
 </div>
