--- a/views/your-expenses.handlebars
+++ b/views/your-expenses.handlebars
@@ -20,7 +20,7 @@
     <div class="row">
       <form class="g-1" method="POST">
         <h1 class="display-5" style="font-size: 24px;">Hi,
-          {{person.name}}
+          {{user.name}}
           ✋</h1>
         <p class="lead">Write down your expenses and we will calculate your
           total 💰
