--- a/views/add-members.handlebars
+++ b/views/add-members.handlebars
@@ -29,6 +29,16 @@
           />
         </div>
         <div class="form-group">
+          <label for="description">Password</label>
+          <input
+            type="password"
+            required="True"
+            class="form-control"
+            name="password"
+            placeholder="Enter password"
+          />
+        </div>
+        <div class="form-group">
           <label for="family">Family</label>
           <select class="form-select" name="family">
             <option value="">Select family</option>
@@ -46,3 +56,16 @@
     </div>
   </div>
 </div>
+{{#if error}}
+  <div class="alert alert-danger" role="alert" id="hideButton">
+    <button
+      name="hideButton"
+      class="btn btn-outline-danger"
+      type="button"
+      onclick="hideExpenses()"
+    >&times;</button>
+    &ThickSpace;
+    <span class="lead" style="font-size:24px;">Something went wrong.
+    </span>
+  </div>
+{{/if}}
