--- a/views/expenses-panel.handlebars
+++ b/views/expenses-panel.handlebars
@@ -7,10 +7,10 @@
       <form class="g-1" method="POST">
         <h1 class="display-5" style="font-size: 24px;">C'mon, spend some money! 💸</h1>
         <p class="lead">But first, who are you? 🛂</p>
-          <select class="form-select" id="familySelect" name="people">
+          <select class="form-select" id="familySelect" name="user">
             <option value="">Choose yourself</option>
-            {{#each people}}
-              <option name="people" value="{{this._id}}">{{this.name}} {{this.lastName}}</option>
+            {{#each users}}
+              <option name="user" value="{{this._id}}">{{this.name}} {{this.lastName}}</option>
             {{/each}}
           </select>
           <br>
