--- a/views/register-admin.handlebars
+++ b/views/register-admin.handlebars
@@ -27,6 +27,16 @@
           />
         </div>
         <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            required="True"
+            class="form-control"
+            name="email"
+            placeholder="Enter email"
+          />
+        </div>
+        <div class="form-group">
           <label for="description">Password</label>
           <input
             type="password"
