✨ Validation if email exists

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,7 +11,7 @@
     to enter admin panel.
   </p>
   <p class="text-center lead">
-    <a style="text-decoration:none" href="/account/login">login</a>
+    <a style="text-decoration:none" href="/login">login</a>
     |
     <a style="text-decoration:none" href="/account">register</a>
   </p>
