--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,9 @@
   </head>
   <body class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <div style="margin: 5%;">
+      {{! hello logged in user }}
+      hello
+      {{_id}}
       {{{body}}}
     </div>
     <script
