--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,16 +5,13 @@
     <a style="text-decoration:none" href="/expenses">here</a>
     to enter expenses management.
   </p>
-  <p class="text-center lead">
-    Click
-    <a style="text-decoration:none" href="/admin">here</a>
-    to enter admin panel.
-  </p>
-  <p class="text-center lead">
-    <a style="text-decoration:none" href="/login">login</a>
-    |
-    <a style="text-decoration:none" href="/account">register</a>
-  </p>
+  {{#if user.isAdmin}}
+    <p class="text-center lead">
+      Click
+      <a style="text-decoration:none" href="/admin">here</a>
+      to enter admin panel.
+    </p>
+  {{/if}}
 </div>
 
 {{#if success}}
