--- a/views/your-expenses.handlebars
+++ b/views/your-expenses.handlebars
@@ -71,7 +71,7 @@
           <a
             class="btn btn-outline-dark"
             type="button"
-            href="/expenses"
+            href="/"
           >Back</a>
         </div>
       </form>
