--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,7 +31,7 @@
           <br>
           {{!-- centered submit button --}}
             <div class="form-group d-flex justify-content-center">
-                <button type="submit" class="btn outline-btn-primary btn-lg btn-block">
+                <button type="submit" id="login-button" class="btn outline-btn-primary btn-lg btn-block">
                 Log in
                 </button>
             </div>
