--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -10,14 +10,21 @@
         <a
           class="btn btn-outline-dark"
           type="button"
+          id="admin-btn"
           href="account/admin"
         >Admin</a>
         <a
           class="btn btn-outline-dark"
           type="button"
+          id="user-btn"
           href="account/user"
         >User</a>
-        <a class="btn btn-outline-dark" type="button" href="/">Back</a>
+        <a
+          class="btn btn-outline-dark"
+          type="button"
+          id="back-btn"
+          href="/"
+        >Back</a>
       </div>
 
     </div>
