--- a/views/add-members.handlebars
+++ b/views/add-members.handlebars
@@ -72,7 +72,7 @@
       name="hideButton"
       class="btn btn-outline-danger"
       type="button"
-      onclick="hideExpenses()"
+      onclick="hide()"
     >&times;</button>
     &ThickSpace;
     <span class="lead" style="font-size:24px;">Something went wrong.
