--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,14 +1,25 @@
 <div class="position-absolute top-50 start-50 translate-middle">
   <h1 class="display-5">Welcome in Family Expenses Web App!</h1>
-  <p class="text-center lead">
-    Click
-    <a style="text-decoration:none" href="/expenses">here</a>
-    to enter expenses management.
-  </p>
+
+  {{#unless user.isAdmin}}
+    <p class="text-center lead">
+      Click
+      <a
+        style="text-decoration:none"
+        id="expenses-panel-link"
+        href="/expenses"
+      >here</a>
+      to enter expenses management.
+    </p>
+  {{/unless}}
   {{#if user.isAdmin}}
     <p class="text-center lead">
       Click
-      <a style="text-decoration:none" href="/admin">here</a>
+      <a
+        style="text-decoration:none"
+        id="admin-panel-link"
+        href="/admin"
+      >here</a>
       to enter admin panel.
     </p>
   {{/if}}
