--- a/views/register-admin.handlebars
+++ b/views/register-admin.handlebars
@@ -49,7 +49,11 @@
         <input value="true" name="isAdmin" hidden="true" checked="true" />
         <br />
         <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-outline-dark">Create!</button>
+          <button
+            type="submit"
+            id="create-btn"
+            class="btn btn-outline-dark"
+          >Create!</button>
           <a class="btn btn-outline-dark" type="button" href="/">Back</a>
         </div>
       </form>
