--- a/views/register-user.handlebars
+++ b/views/register-user.handlebars
@@ -56,7 +56,11 @@
           </select>
           <br />
           <div class="d-grid gap-2">
-            <button type="submit" class="btn btn-outline-dark">Create!</button>
+            <button
+              type="submit"
+              id="create-btn"
+              class="btn btn-outline-dark"
+            >Create!</button>
             <a class="btn btn-outline-dark" type="button" href="/">Back</a>
           </div>
         </div>
