✅ Added unit test to main features

--- a/views/add-budget.handlebars
+++ b/views/add-budget.handlebars
@@ -29,8 +29,8 @@
         </div>
         <br />
         <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-outline-dark">Save</button>
-          <a class="btn btn-outline-dark" type="button" href="/admin">Back</a>
+          <button type="submit" class="btn btn-outline-dark" id="save-button">Save</button>
+          <a class="btn btn-outline-dark" type="button" href="/admin" id="back-button">Back</a>
         </div>
       </form>
     </div>
