--- a/views/add-family.handlebars
+++ b/views/add-family.handlebars
@@ -63,8 +63,17 @@
         {{/if}}
         <br />
         <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-outline-dark">Add Family</button>
-          <a class="btn btn-outline-dark" type="button" href="/admin">Back</a>
+          <button
+            type="submit"
+            class="btn btn-outline-dark"
+            id="add-family-button"
+          >Add Family</button>
+          <a
+            class="btn btn-outline-dark"
+            id="back-button"
+            type="button"
+            href="/admin"
+          >Back</a>
         </div>
       </form>
     </div>
