--- a/views/add-members.handlebars
+++ b/views/add-members.handlebars
@@ -59,8 +59,17 @@
         </div>
         <br />
         <div class="d-grid gap-2">
-          <button type="submit" class="btn btn-outline-dark">Add Member</button>
-          <a class="btn btn-outline-dark" type="button" href="/admin">Back</a>
+          <button
+            type="submit"
+            class="btn btn-outline-dark"
+            id="add-family-member-button"
+          >Add Member</button>
+          <a
+            class="btn btn-outline-dark"
+            type="button"
+            href="/admin"
+            id="back-button"
+          >Back</a>
         </div>
       </form>
     </div>
