--- a/views/admin-panel.handlebars
+++ b/views/admin-panel.handlebars
@@ -8,19 +8,27 @@
         <a
           class="btn btn-outline-dark"
           type="button"
+          id="add-family-link"
           href="admin/add-family"
         >Add family</a>
         <a
           class="btn btn-outline-dark"
           type="button"
+          id="add-family-members-link"
           href="admin/add-members"
         >Add family member</a>
         <a
           class="btn btn-outline-dark"
           type="button"
+          id="add-family-budget-link"
           href="admin/add-budget"
         >Add budget</a>
-        <a class="btn btn-outline-dark" type="button" href="/">Back</a>
+        <a
+          class="btn btn-outline-dark"
+          type="button"
+          id="back-link"
+          href="/"
+        >Back</a>
       </div>
     </div>
   </div>
